Remove stemCSS, but install it with a postinstall script

--- a/assets/scss/utilities/_background.scss
+++ b/assets/scss/utilities/_background.scss
@@ -1,20 +1,15 @@
 
 @each $key, $value in ($auto-colors) {
   @include make-utility((
-    alias: 'bgcolor-' + $key,
+    alias: 'bg-color-' + $key,
     class: true,
     background-color: $value
   ));
 }
 
-@include make-utility((
-  alias: 'bgrepeat-no',
-  background-repeat: no-repeat
-));
-
 @each $value in (cover, contain) {
   @include make-utility((
-    alias: 'bgsize-' + $value,
+    alias: 'bg-size-' + $value,
     background-size: $value
   ));
 }
