--- a/assets/scss/utilities/_position.scss
+++ b/assets/scss/utilities/_position.scss
@@ -20,7 +20,7 @@
     @include make-utility((
       alias: $property + '-' + $value + $global-unit-percent,
       class: true,
-      $property: $value + '%'
+      $property: $value * 1%
     ));
   }
 
